[FIX] mail: prevents the callView from being too small on small screens
Before this commit, the callView could end up too small and only have
space for the callActionList, which was hiding call participants.

--- a/addons/mail/static/src/components/call_view/call_view.scss
+++ b/addons/mail/static/src/components/call_view/call_view.scss
@@ -7,6 +7,6 @@
 
     &.o-isMinimized {
         height: 20%;
-        min-height: 20%;
+        min-height: #{"max(20%, 150px)"};
     }
 }
